// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generatePointCloudData Should create the expected plotly point cloud data format when given defaults. 1`] = `
Object {
  "marker": Object {
    "sizemax": 10,
    "sizemin": 5,
  },
  "mode": "markers",
  "type": "pointcloud",
  "xy": Float32Array [
    1,
    2,
    3,
    4,
  ],
}
`;

exports[`generateScatterGLData Should create the expected plotly scatter data format when given defaults. 1`] = `
Object {
  "hoverinfo": "x+y+z",
  "marker": Object {
    "color": Array [
      6,
      2,
    ],
    "size": 4,
  },
  "mode": "markers",
  "name": "da-bo-dee undefined",
  "type": "scattergl",
  "x": Array [
    9,
    7,
  ],
  "y": Array [
    8,
    6,
  ],
  "z": Array [
    6,
    2,
  ],
}
`;

exports[`generateSecondaryStructureAxis Should handle secondary structure containing a chain of residues with the same structure. 1`] = `
Array [
  Object {
    "hoverinfo": "name",
    "line": Object {
      "color": undefined,
      "width": 5,
    },
    "mode": "lines",
    "name": "310_HELIX",
    "orientation": "h",
    "showlegend": false,
    "type": "scatter",
    "x": Array [
      0,
      1,
      1,
      2,
    ],
    "xaxis": "x",
    "y": Array [
      1,
      1,
      1,
      1,
    ],
    "yaxis": "y2",
  },
  Object {
    "hoverinfo": "name",
    "line": Object {
      "color": undefined,
      "width": 5,
    },
    "mode": "lines",
    "name": "310_HELIX",
    "orientation": "v",
    "showlegend": false,
    "type": "scatter",
    "x": Array [
      1,
      1,
      1,
      1,
    ],
    "xaxis": "x2",
    "y": Array [
      0,
      1,
      1,
      2,
    ],
    "yaxis": "y",
  },
]
`;

exports[`generateSecondaryStructureAxis Should handle secondary structure containing a single residue. 1`] = `
Array [
  Object {
    "hoverinfo": "name",
    "line": Object {
      "color": undefined,
      "width": 5,
    },
    "mode": "lines",
    "name": "310_HELIX",
    "orientation": "h",
    "showlegend": false,
    "type": "scatter",
    "x": Array [
      0,
      1,
    ],
    "xaxis": "x",
    "y": Array [
      1,
      1,
    ],
    "yaxis": "y2",
  },
  Object {
    "hoverinfo": "name",
    "line": Object {
      "color": undefined,
      "width": 5,
    },
    "mode": "lines",
    "name": "310_HELIX",
    "orientation": "v",
    "showlegend": false,
    "type": "scatter",
    "x": Array [
      1,
      1,
    ],
    "xaxis": "x2",
    "y": Array [
      0,
      1,
    ],
    "yaxis": "y",
  },
]
`;

exports[`generateSecondaryStructureAxis Should handle secondary structure containing alternating chains of residues with different structures. 1`] = `
Array [
  Object {
    "hoverinfo": "name",
    "line": Object {
      "color": undefined,
      "width": 5,
    },
    "mode": "lines",
    "name": "310_HELIX",
    "orientation": "h",
    "showlegend": false,
    "type": "scatter",
    "x": Array [
      0,
      1,
      1,
    ],
    "xaxis": "x",
    "y": Array [
      1,
      1,
      1,
    ],
    "yaxis": "y2",
  },
  Object {
    "hoverinfo": "name",
    "line": Object {
      "color": undefined,
      "width": 5,
    },
    "mode": "lines",
    "name": "310_HELIX",
    "orientation": "v",
    "showlegend": false,
    "type": "scatter",
    "x": Array [
      1,
      1,
      1,
    ],
    "xaxis": "x2",
    "y": Array [
      0,
      1,
      1,
    ],
    "yaxis": "y",
  },
  Object {
    "hoverinfo": "name",
    "line": Object {
      "color": undefined,
      "width": 5,
    },
    "mode": "lines",
    "name": "BETA_BRIDGE",
    "orientation": "h",
    "showlegend": false,
    "type": "scatter",
    "x": Array [
      2,
      3,
      3,
      4,
    ],
    "xaxis": "x",
    "y": Array [
      1,
      1,
      1,
      1,
    ],
    "yaxis": "y2",
  },
  Object {
    "hoverinfo": "name",
    "line": Object {
      "color": undefined,
      "width": 5,
    },
    "mode": "lines",
    "name": "BETA_BRIDGE",
    "orientation": "v",
    "showlegend": false,
    "type": "scatter",
    "x": Array [
      1,
      1,
      1,
      1,
    ],
    "xaxis": "x2",
    "y": Array [
      2,
      3,
      3,
      4,
    ],
    "yaxis": "y",
  },
  Object {
    "hoverinfo": "name",
    "line": Object {
      "color": "green",
      "width": 5,
    },
    "mode": "lines",
    "name": "BETA_SHEET",
    "orientation": "h",
    "showlegend": false,
    "type": "scatter",
    "x": Array [
      5,
      6,
    ],
    "xaxis": "x",
    "y": Array [
      1,
      1,
    ],
    "yaxis": "y2",
  },
  Object {
    "hoverinfo": "name",
    "line": Object {
      "color": "green",
      "width": 5,
    },
    "mode": "lines",
    "name": "BETA_SHEET",
    "orientation": "v",
    "showlegend": false,
    "type": "scatter",
    "x": Array [
      1,
      1,
    ],
    "xaxis": "x2",
    "y": Array [
      5,
      6,
    ],
    "yaxis": "y",
  },
]
`;
